[gd_scene load_steps=8 format=2]

[ext_resource path="res://Ui/Born2bSportyV2.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Level/buttons/Exit.tscn" type="PackedScene" id=2]
[ext_resource path="res://Level/buttons/Continue.tscn" type="PackedScene" id=3]
[ext_resource path="res://Level/buttons/MainMenu.tscn" type="PackedScene" id=4]
[ext_resource path="res://Scripts/PauseMenu.gd" type="Script" id=5]
[ext_resource path="res://Level/buttons/Restart.tscn" type="PackedScene" id=6]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 1 )

[node name="PauseMenu" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="ColorRect" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.392157 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -90.0
margin_top = 20.0
margin_right = 90.0
margin_bottom = -20.0
size_flags_horizontal = 7
size_flags_vertical = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 180.0
margin_bottom = 40.0
custom_colors/font_color = Color( 0.592157, 0.470588, 0.0431373, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 0
custom_constants/shadow_offset_y = 2
custom_fonts/font = SubResource( 1 )
text = "PAUSE"
align = 1
valign = 1

[node name="Button" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 44.0
margin_right = 180.0
margin_bottom = 154.0
size_flags_horizontal = 7
size_flags_vertical = 7
custom_constants/separation = 10
alignment = 1

[node name="Continue" parent="VBoxContainer/Button" instance=ExtResource( 3 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_right = 180.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Restart" parent="VBoxContainer/Button" instance=ExtResource( 6 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 30.0
margin_right = 180.0
margin_bottom = 50.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="MainMenu" parent="VBoxContainer/Button" instance=ExtResource( 4 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 60.0
margin_right = 180.0
margin_bottom = 80.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Exit" parent="VBoxContainer/Button" instance=ExtResource( 2 )]
anchor_left = 0.0
anchor_right = 0.0
margin_left = 0.0
margin_top = 90.0
margin_right = 180.0
margin_bottom = 110.0
focus_mode = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[connection signal="pressed" from="VBoxContainer/Button/Continue" to="." method="_on_Continue_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/Restart" to="." method="_on_Restart_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/MainMenu" to="." method="_on_MainMenu_pressed"]
[connection signal="pressed" from="VBoxContainer/Button/Exit" to="." method="_on_Exit_pressed"]
